# cql-rs

./: Cargo.toml  justfile
crates/octofhir-cql/: CLI_README.md  Cargo.toml  compliance_report.md
crates/octofhir-cql-ast/: Cargo.toml
crates/octofhir-cql-ast/src/: expression.rs  lib.rs  library.rs  literal.rs  operator.rs  query.rs  types.rs
crates/octofhir-cql-cli/: Cargo.toml
crates/octofhir-cql-cli/src/: main.rs
crates/octofhir-cql-diagnostics/: Cargo.toml
crates/octofhir-cql-diagnostics/src/: error.rs  error_code.rs  lib.rs  span.rs
crates/octofhir-cql-elm/: Cargo.toml
crates/octofhir-cql-elm/src/: converter.rs  lib.rs  model.rs  serialize.rs
crates/octofhir-cql-eval/: Cargo.toml
crates/octofhir-cql-eval/src/: context.rs  engine.rs  error.rs  lib.rs  query.rs  registry.rs  retrieve.rs  terminology.rs  value.rs
crates/octofhir-cql-eval/src/operators/: arithmetic.rs  clinical.rs  comparison.rs  datetime.rs  interval.rs  list.rs  logical.rs  mod.rs  string.rs  type_ops.rs
crates/octofhir-cql-eval/tests/: operator_tests.rs  queries.rs
crates/octofhir-cql-eval/tests/operators/: aggregate.rs  arithmetic.rs  comparison.rs  datetime.rs  interval.rs  list.rs  logical.rs  mod.rs  string.rs
crates/octofhir-cql-model/: Cargo.toml  README.md
crates/octofhir-cql-model/examples/: basic_integration.rs  on_the_fly_generation.rs  runtime_loading.rs
crates/octofhir-cql-model/resources/: FHIR-modelinfo-4.0.1.xml  FHIR-modelinfo-5.0.0.xml
crates/octofhir-cql-model/src/: lib.rs  model_info.rs  provider.rs  registry.rs  retriever.rs
crates/octofhir-cql-model/src/fhir/: mod.rs  r4.rs  r5.rs
crates/octofhir-cql-model/src/model_info/: mod.rs  parser.rs  types.rs
crates/octofhir-cql-parser/: Cargo.toml
crates/octofhir-cql-parser/src/: combinators.rs  expression.rs  lib.rs  library.rs
crates/octofhir-cql-parser/tests/: library.rs  literals.rs  operators.rs  queries.rs  recovery.rs
crates/octofhir-cql-types/: Cargo.toml
crates/octofhir-cql-types/src/: coercion.rs  inference.rs  lib.rs  system_types.rs  type_system.rs  value.rs
crates/octofhir-cql-types/src/semantic/: mod.rs  resolver.rs  scope.rs  symbols.rs
crates/octofhir-cql-types/tests/: coercion.rs  inference.rs
crates/octofhir-cql/benches/: evaluator.rs  parser.rs
crates/octofhir-cql/src/: lib.rs
crates/octofhir-cql/src/cli/: execute.rs  mod.rs  output.rs  repl.rs  resolver.rs  translate.rs  validate.rs
crates/octofhir-cql/tests/: cqframework_spec_tests.rs  google_cql_spec_tests.rs
crates/octofhir-cql/tests/common/: evaluation.rs  fhir_data.rs  mocks.rs  mod.rs  parsing.rs
crates/octofhir-cql/tests/google_cql_tests/: extract_tests.py  mod.rs  runner.rs
crates/octofhir-cql/tests/google_cql_tests/data/: conditional.json  expression.json  literal.json  operator_arithmetic.json  operator_comparison.json  operator_datetime.json  operator_interval.json  operator_list.json  operator_logic.json  operator_nullological.json  operator_string.json
crates/octofhir-cql/tests/spec_tests/: mod.rs  runner.rs  xml_parser.rs
tests/: snapshot_tests.rs
