[package]
name = "octofhir-cql-ast"
description = "CQL Abstract Syntax Tree definitions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octofhir-cql-diagnostics = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
