[package]
name = "octofhir-cql-model"
description = "CQL data model abstraction for FHIR and other data models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octofhir-cql-types = { workspace = true }
octofhir-cql-diagnostics = { workspace = true }
octofhir-fhir-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"

[lints]
workspace = true
