[package]
name = "octofhir-cql-parser"
description = "CQL parser using Winnow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octofhir-cql-ast = { workspace = true }
octofhir-cql-diagnostics = { workspace = true }
winnow = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
