[package]
name = "octofhir-cql-types"
description = "CQL type system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octofhir-cql-diagnostics = { workspace = true }
octofhir-cql-ast = { workspace = true }
octofhir-ucum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
