[package]
name = "octofhir-cql"
description = "Clinical Quality Language (CQL) implementation for Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "octofhir_cql"
path = "src/lib.rs"

[[bin]]
name = "cql"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
octofhir-cql-ast = { workspace = true }
octofhir-cql-parser = { workspace = true }
octofhir-cql-elm = { workspace = true }
octofhir-cql-types = { workspace = true }
octofhir-cql-eval = { workspace = true }
octofhir-cql-model = { workspace = true }
octofhir-cql-diagnostics = { workspace = true }

# CLI dependencies
clap = { workspace = true }
human-panic = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rustyline = { version = "13", optional = true }
tabled = { version = "0.15", optional = true }

[features]
default = ["cli"]
cli = ["rustyline", "tabled"]

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
indexmap = { workspace = true }
async-trait = { workspace = true }
quick-xml = { workspace = true }

[lints]
workspace = true
